Avoid needless overflow and include bottom margin in overflow

--- a/packages/block-editor/src/components/block-canvas/style.scss
+++ b/packages/block-editor/src/components/block-canvas/style.scss
@@ -1,6 +1,7 @@
 iframe[name="editor-canvas"] {
 	box-sizing: border-box;
 	width: 100%;
+	max-width: 100%;
 	height: 100%;
 	display: block;
 	background-color: transparent;
