--- a/packages/block-editor/src/components/iframe/content.scss
+++ b/packages/block-editor/src/components/iframe/content.scss
@@ -6,6 +6,7 @@
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
+	display: flex;
 }
 
 .block-editor-iframe__scale-container {
@@ -17,7 +18,7 @@
 	$container-width: var(--wp-block-editor-iframe-zoom-out-container-width, 100vw);
 	$prev-container-width: var(--wp-block-editor-iframe-zoom-out-prev-container-width, 100vw);
 	width: $prev-container-width;
-	margin-left: calc(-1 * (#{$prev-container-width} - #{$container-width}) / 2);
+	margin-inline: calc(-1 * (#{$prev-container-width} - #{$container-width}) / 2);
 }
 
 .block-editor-iframe__html {
