--- a/packages/editor/src/components/visual-editor/style.scss
+++ b/packages/editor/src/components/visual-editor/style.scss
@@ -1,6 +1,6 @@
 .editor-visual-editor {
 	position: relative;
-	height: 100%;
+	flex: 1 0 auto;
 	display: block;
 	background-color: $gray-300;
 	// Make this a stacking context to contain the z-index of children elements.
